<resources>
    <string name="app_name">Nota Final</string>

    <string name="hello_world">Hello world!</string>

    <string name="introd">Ingrese en las casillas la nota correspondiente</string>
    <string name="pintrod">Ingrese en las casillas el porcentaje de la nota correspondiente</string>
    <string name="quices">Quices</string>
    <string name="equices">15%</string>
    <string name="expo">Exposiciones</string>
    <string name="eexpo">10%</string>
    <string name="practicas">Practicas</string>
    <string name="epracticas">40%</string>
    <string name="proyecto">Proyecto final</string>
    <string name="eproyecto">35%</string>
    <string name="promediar">Promediar</string>
    <string name="nota">Nota final</string>
    <string name="toastoncreate">onCreate</string>
    <string name="toastcampos">Faltan campos por llenar!</string>
    <string name="toastmayor5">Las notas no pueden ser mayores a 5!</string>
    <string name="about">Aplicacion para calcular las notas del curso de Aplicaciones para dispositivos moviles.</string>
    <string name="babout">Acerca de</string>
    <string name="bsetporcentaje">Aceptar</string>
    <string name="configNotas">Configurar porcentajes</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_configuracion_de_notas">Configuracion_de_notas</string>
</resources>
